<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>Inventory-Caretaker</artifactId>
    <version>1.0.0</version>

    <properties>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>15.0.1</javafx.version>
        <testfx.version>4.0.16-alpha</testfx.version>
        <hibernate.version>5.4.27.Final</hibernate.version>
        <maven.test.plugin.version>3.0.0-M5</maven.test.plugin.version>
        <jpackage.plugin.version>1.5.1</jpackage.plugin.version>
        <module.name>inventory.caretaker</module.name>
        <main.class>uk.ac.aber.cs39440.inventory.caretaker.application.Application</main.class>
        <platform>linux</platform>
        <build.module.directory>${project.build.directory}/modules</build.module.directory>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>${hibernate.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.34.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.github.gwenn</groupId>
            <artifactId>sqlite-dialect</artifactId>
            <version>0.1.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
            <classifier>${platform}</classifier>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
            <classifier>${platform}</classifier>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.7.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.dbunit</groupId>
            <artifactId>dbunit</artifactId>
            <version>2.7.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-core</artifactId>
            <version>${testfx.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testfx</groupId>
            <artifactId>testfx-junit5</artifactId>
            <version>${testfx.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.5</version>
                <configuration>
                    <mainClass>${main.class}</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.test.plugin.version}</version>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven.test.plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                        <configuration>
                            <!--Skip the Integration tests until headless mode is configured-->
                            <skipITs>true</skipITs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.2</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${build.module.directory}</outputDirectory>
                            <excludeTransitive>false</excludeTransitive>
                            <includeScope>runtime</includeScope>
                            <copyPom>true</copyPom>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.moditect</groupId>
                <artifactId>moditect-maven-plugin</artifactId>
                <version>1.0.0.Beta2</version>
                <executions>
                    <execution>
                        <id>convert-dependencies-to-modules</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>add-module-info</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${build.module.directory}</outputDirectory>
                            <modules>
                                <module>
                                    <artifact>
                                        <groupId>org.hibernate</groupId>
                                        <artifactId>hibernate-core</artifactId>
                                        <version>${hibernate.version}</version>
                                    </artifact>
                                    <moduleInfoFile>dependency-info/hibernate/module-info.java</moduleInfoFile>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>javax.activation</groupId>
                                        <artifactId>javax.activation-api</artifactId>
                                        <version>1.2.0</version>
                                    </artifact>
                                    <moduleInfoFile>dependency-info/javax-activation/module-info.java</moduleInfoFile>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>javax.persistence</groupId>
                                        <artifactId>javax.persistence-api</artifactId>
                                        <version>2.2</version>
                                    </artifact>
                                    <moduleInfoFile>dependency-info/javax-persistence/module-info.java</moduleInfoFile>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>org.jboss.logging</groupId>
                                        <artifactId>jboss-logging</artifactId>
                                        <version>3.4.1.Final</version>
                                    </artifact>
                                    <moduleInfoFile>dependency-info/jboss-logging/module-info.java</moduleInfoFile>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>org.jboss</groupId>
                                        <artifactId>jandex</artifactId>
                                        <version>2.1.3.Final</version>
                                    </artifact>
                                    <moduleInfoFile>dependency-info/jboss-jandex/module-info.java</moduleInfoFile>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>org.xerial</groupId>
                                        <artifactId>sqlite-jdbc</artifactId>
                                        <version>3.34.0</version>
                                    </artifact>
                                    <moduleInfoFile>dependency-info/sqlite-jdbc/module-info.java</moduleInfoFile>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>org.jboss.spec.javax.transaction</groupId>
                                        <artifactId>jboss-transaction-api_1.2_spec</artifactId>
                                        <version>1.1.1.Final</version>
                                    </artifact>
                                    <moduleInfoFile>dependency-info/jboss-transaction/module-info.java</moduleInfoFile>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>com.github.gwenn</groupId>
                                        <artifactId>sqlite-dialect</artifactId>
                                        <version>0.1.2</version>
                                    </artifact>
                                    <moduleInfoFile>dependency-info/sqlite-dialect/module-info.java</moduleInfoFile>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>antlr</groupId>
                                        <artifactId>antlr</artifactId>
                                        <version>2.7.7</version>
                                    </artifact>
                                    <moduleInfoFile>dependency-info/antlr/module-info.java</moduleInfoFile>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>org.dom4j</groupId>
                                        <artifactId>dom4j</artifactId>
                                        <version>2.1.3</version>
                                    </artifact>
                                    <moduleInfoFile>dependency-info/dom4j/module-info.java</moduleInfoFile>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>org.javassist</groupId>
                                        <artifactId>javassist</artifactId>
                                        <version>3.27.0-GA</version>
                                    </artifact>
                                    <moduleInfoFile>dependency-info/javassist/module-info.java</moduleInfoFile>
                                </module>
                                <module>
                                    <artifact>
                                        <groupId>org.hibernate.common</groupId>
                                        <artifactId>hibernate-commons-annotations</artifactId>
                                        <version>5.1.2.Final</version>
                                    </artifact>
                                    <moduleInfoFile>dependency-info/hibernate-annotation/module-info.java</moduleInfoFile>
                                </module>
                            </modules>
                            <overwriteExistingFiles>true</overwriteExistingFiles>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>${jpackage.plugin.version}</version>
                <executions>
                    <execution>
                        <id>package-project</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jpackage</goal>
                        </goals>
                        <configuration>
                            <name>Inventory Caretaker</name>
                            <appVersion>${project.version}</appVersion>
                            <vendor>Damion Wilson</vendor>
                            <module>${module.name}/${main.class}</module>
                            <modulePaths>
                                <path>${build.module.directory}</path>
                                <path>${project.build.directory}/classes</path>
                            </modulePaths>
                            <destination>${project.build.directory}/dist</destination>
                            <javaOptions>
                                <option>--enable-preview</option>
                                <option>-Dfile.encoding=UTF-8</option>
                            </javaOptions>
                            <copyright>Copyright 2021, all rights reserved</copyright>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>Windows-Build</id>
            <activation>
                <os>
                    <family>windows</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>${jpackage.plugin.version}</version>
                        <configuration>
                            <winDirChooser>true</winDirChooser>
                            <winShortcut>true</winShortcut>
                            <winMenu>true</winMenu>
                            <winMenuGroup>Inventory Caretaker</winMenuGroup>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>Mac-Build</id>
            <activation>
                <os>
                    <family>mac</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>${jpackage.plugin.version}</version>
                        <configuration>
                            <macPackageIdentifier>Inventory Caretaker</macPackageIdentifier>
                            <macPackageName>Inventory Caretaker</macPackageName>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>Linux-Build</id>
            <activation>
                <os>
                    <family>linux</family>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.panteleyev</groupId>
                        <artifactId>jpackage-maven-plugin</artifactId>
                        <version>${jpackage.plugin.version}</version>
                        <configuration>
                            <linuxMenuGroup>Inventory Caretaker</linuxMenuGroup>
                            <linuxShortcut>true</linuxShortcut>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>